map color contrast errors fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ ul, li {
     top: -80px;
     left: 0;
     z-index: 100;
-    color: #ffffff;
+    color: #000000;
     font-size:1em;
     padding:1%;
     margin: 1%;
@@ -120,6 +120,10 @@ nav h1 a {
   height: 400px;
   width: 100%;
   background-color: #ccc;
+}
+/* ====================== Map Color Contrast Update====================== */
+.leaflet-container .leaflet-control-attribution {
+  background: rgba(255, 255, 255, 1);
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
